# vcenter-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/vcenter_mcp/: __init__.py  client.py  config.py  server.py
src/vcenter_mcp/tools/: __init__.py  clusters.py  datastores.py  hosts.py  metrics.py  networks.py  vms.py
tests/: conftest.py  test_tools.py
