[project]
name = "vcenter-mcp"
version = "0.1.0"
description = "MCP server for VMware vCenter 8 and ESXi 8 — manage VMs, hosts, clusters, networks and metrics"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["mcp", "vmware", "vcenter", "esxi", "vsphere"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "respx>=0.21",
]

[project.scripts]
vcenter-mcp = "vcenter_mcp.server:main"

[project.urls]
Homepage = "https://github.com/stream/vcenter-mcp"
Repository = "https://github.com/stream/vcenter-mcp"
Issues = "https://github.com/stream/vcenter-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vcenter_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
